# zbar_scan_plugin

./: README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
lib/: zbar_scan_plugin.dart  zbar_scan_plugin_bindings_generated.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  zbar_scan_plugin.c  zbar_scan_plugin.h
